add route guard in store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<ng-progress [showSpinner]="false" [color]="'#000'"></ng-progress>
+<ng-progress [showSpinner]="false" [color]="'#FFA500'"></ng-progress>
 <app-header></app-header>
 <router-outlet></router-outlet>
-
